完善栈叙述功能与双库验证
